--- a/others/200R.md
+++ b/others/200R.md
@@ -288,41 +288,375 @@ result <- factorial(num)
 cat("Factorial of", num, "is", result, "\n")
 ```
 
-## 
+## Linear search
 ```r
-```
-## 
-```r
+linear_scan<- function(vec, val) {
+    for(ele in vec){
+        if(val == ele){
+            return (TRUE)
+        }
+    }
+    return (FALSE)
+}
+
+vec = c(10, 20, 30, 40, 50)
+print(linear_scan(vec, 10))
+print(linear_scan(vec, 60))
 ```
 
-## 
+## Linear search recursive
 ```r
+linear_search_recursive <- function(arr, target, index = 1) {
+  if (index > length(arr)) {
+    return(NULL)
+  }
+  
+  if (arr[index] == target) {
+    return(index)
+  }
+  
+  return(linear_search_recursive(arr, target, index + 1))
+}
+
+vec = c(10, 20, 30, 40, 50)
+print(linear_search_recursive(vec, 10))
+print(linear_search_recursive(vec, 60))
 ```
 
-## 
+## Hashmap in r
 ```r
+hash_map <- list()
+
+hash_map[["key1"]] <- "value1"
+hash_map[["key2"]] <- "value2"
+hash_map[["key3"]] <- "value3"
+
+value <- hash_map[["key2"]]
+print(value)
 ```
 
-## 
+## String character count
 ```r
-```
-## 
-```r
+count_character_occurrences <- function(input_string) {
+    char_count <- list()
+
+    for (char in strsplit(input_string, "")[[1]]) {
+        if (char != "") {
+            if (is.null(char_count[[char]])) {
+                char_count[[char]] <- 1
+            } else {
+                char_count[[char]] <- char_count[[char]] + 1
+            }
+        }
+    }
+
+    return(char_count)
+}
+
+input_string <- "hello world"
+character_counts <- count_character_occurrences(input_string)
+for (char in names(character_counts)) {
+    cat(char, ":", character_counts[[char]], "\n")
+}
 ```
 
-## 
+## Binary Tree implementation
 ```r
+Node <- function(key) {
+  list(
+    key = key,
+    left = NULL,
+    right = NULL
+  )
+}
+
+insert <- function(root, key) {
+  if (is.null(root)) {
+    return(Node(key))
+  }
+  
+  if (key < root$key) {
+    root$left <- insert(root$left, key)
+  } else if (key > root$key) {
+    root$right <- insert(root$right, key)
+  }
+  
+  return(root)
+}
+
+print_tree <- function(root, level = 0) {
+  if (!is.null(root)) {
+    print_tree(root$right, level + 1)
+    cat(paste(rep("    ", level), collapse = ""), root$key, "\n")
+    print_tree(root$left, level + 1)
+  }
+}
+
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+for (key in keys) {
+  root <- insert(root, key)
+}
+
+print_tree(root)
 ```
-## 
+## Search in BST
 ```r
+search <- function(root, key) {
+  if (is.null(root) || root$key == key) {
+    return(TRUE)
+  }
+  
+  if (key < root$key) {
+    return(search(root$left, key))
+  }
+  
+  return(search(root$right, key))
+}
+
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+for (key in keys) {
+  root <- insert(root, key)
+}
+
+print(search(root, 18))
 ```
 
-## 
+## Different BST traversal
 ```r
+in_order_traversal <- function(root) {
+  if (!is.null(root)) {
+    in_order_traversal(root$left)
+    cat(root$key, " ")
+    in_order_traversal(root$right)
+  }
+}
+
+# Pre-order traversal
+pre_order_traversal <- function(root) {
+  if (!is.null(root)) {
+    cat(root$key, " ")
+    pre_order_traversal(root$left)
+    pre_order_traversal(root$right)
+  }
+}
+
+# Post-order traversal
+post_order_traversal <- function(root) {
+  if (!is.null(root)) {
+    post_order_traversal(root$left)
+    post_order_traversal(root$right)
+    cat(root$key, " ")
+  }
+}
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+for (key in keys) {
+  root <- insert(root, key)
+}
+
+print(in_order_traversal(root))
+print(pre_order_traversal(root))
+print(post_order_traversal(root))
+```
+## Sorted array from BST
+```r
+in_order_sorted_array <- function(root) {
+  result <- c()
+  
+  if (!is.null(root)) {
+    result <- c(result, in_order_sorted_array(root$left))
+    result <- c(result, root$key)
+    result <- c(result, in_order_sorted_array(root$right))
+  }
+  
+  return(result)
+}
+
+# Example usage
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+for (key in keys) {
+  root <- insert(root, key)
+}
+
+sorted_array <- in_order_sorted_array(root)
+print(sorted_array)
 ```
 
-## 
+## Balanced BST from sorted array
 ```r
+# Create a balanced BST from a sorted array
+balanced_bst_from_sorted_array <- function(sorted_array) {
+  n <- length(sorted_array)
+  if (n == 0) {
+    return(NULL)
+  }
+  
+  mid <- ceiling(n / 2)
+  root <- Node(sorted_array[mid])
+  
+  root$left <- balanced_bst_from_sorted_array(sorted_array[1:(mid - 1)])
+  root$right <- balanced_bst_from_sorted_array(sorted_array[(mid + 1):n])
+  
+  return(root)
+}
+
+# Example usage
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+# Creating the initial BST
+for (key in keys) {
+  root <- insert(root, key)
+}
+print_tree(root)
+# Sorting the BST and creating a balanced BST
+sorted_array <- in_order_sorted_array(root)
+print("Sorted Array:")
+print(sorted_array)
+
+balanced_root <- balanced_bst_from_sorted_array(sorted_array)
+cat("\nBalanced BST In-order Traversal:\n")
+print_tree(balanced_root)
+```
+
+## AVL Tree 
+```r
+# Define the structure for an AVL tree node
+AVLNode <- function(key) {
+  list(
+    key = key,
+    left = NULL,
+    right = NULL,
+    height = 1
+  )
+}
+
+# Get the height of a node
+get_height <- function(node) {
+  if (is.null(node)) {
+    return(0)
+  }
+  return(node$height)
+}
+
+# Calculate the balance factor of a node
+get_balance_factor <- function(node) {
+  if (is.null(node)) {
+    return(0)
+  }
+  return(get_height(node$left) - get_height(node$right))
+}
+
+# Update the height of a node
+update_height <- function(node) {
+  if (!is.null(node)) {
+    node$height <- max(get_height(node$left), get_height(node$right)) + 1
+  }
+}
+
+# Rotate a subtree to the right
+rotate_right <- function(y) {
+  x <- y$left
+  T2 <- x$right
+  
+  x$right <- y
+  y$left <- T2
+  
+  update_height(y)
+  update_height(x)
+  
+  return(x)
+}
+
+# Rotate a subtree to the left
+rotate_left <- function(x) {
+  y <- x$right
+  T2 <- y$left
+  
+  y$left <- x
+  x$right <- T2
+  
+  update_height(x)
+  update_height(y)
+  
+  return(y)
+}
+
+# Rebalance the tree
+rebalance <- function(node, key) {
+  update_height(node)
+  
+  balance_factor <- get_balance_factor(node)
+  
+  # Left heavy
+  if (balance_factor > 1 && key < node$left$key) {
+    return(rotate_right(node))
+  }
+  
+  # Right heavy
+  if (balance_factor < -1 && key > node$right$key) {
+    return(rotate_left(node))
+  }
+  
+  # Left-Right case
+  if (balance_factor > 1 && key > node$left$key) {
+    node$left <- rotate_left(node$left)
+    return(rotate_right(node))
+  }
+  
+  # Right-Left case
+  if (balance_factor < -1 && key < node$right$key) {
+    node$right <- rotate_right(node$right)
+    return(rotate_left(node))
+  }
+  
+  return(node)
+}
+
+# Insert a key into the AVL tree
+insert <- function(root, key) {
+  if (is.null(root)) {
+    return(AVLNode(key))
+  }
+  
+  if (key < root$key) {
+    root$left <- insert(root$left, key)
+  } else if (key > root$key) {
+    root$right <- insert(root$right, key)
+  } else {
+    # Duplicate keys are not allowed in this example
+    return(root)
+  }
+  
+  return(rebalance(root, key))
+}
+
+# In-order traversal
+in_order_traversal <- function(root) {
+  if (!is.null(root)) {
+    in_order_traversal(root$left)
+    cat(root$key, " ")
+    in_order_traversal(root$right)
+  }
+}
+
+# Example usage
+root <- NULL
+keys <- c(5, 3, 7, 2, 4, 6, 8)
+
+for (key in keys) {
+  root <- insert(root, key)
+}
+
+cat("AVL Tree In-order Traversal:\n")
+in_order_traversal(root)
 ```
 
 ## 
